# slayer-in-the-shadows

./: .gitignore  README.md  make.ps1  pyproject.toml  run_game.py
.github/workflows/: dependency-review.yaml  github-pages-python-sphinx.yaml  precommit-autoupdate.yaml  python-ci.yaml  python-publish-pypi.yaml
docs/source/: changelog.rst  conf.py  index.rst
src/pyweek-2023-03/: __init__.py  __main__.py  assets.py  constants.py  game_view.py  handlers.py  views.py
src/pyweek-2023-03/assets/levels/: demo.tmx  inf_demo.tmx
src/pyweek-2023-03/assets/tilesets/: spawners.tsx
src/pyweek-2023-03/sprites/: character.py  enemy.py  healthbar.py  player.py
src/pyweek_2023_03/: __init__.py  __main__.py  assets.py  constants.py  game_view.py  handlers.py
src/pyweek_2023_03/assets/levels/: demo.tmx  inf_demo.tmx
src/pyweek_2023_03/assets/tilesets/: map.tsx  spawners.tsx
src/pyweek_2023_03/sprites/: attacks.py  bars.py  character.py  enemy.py  healthbar.py  player.py
src/slayer_in_the_shadows/: __init__.py  assets.py  constants.py
src/slayer_in_the_shadows/assets/tilesets/: map.tsx
src/slayer_in_the_shadows/sprites/: __init__.py  enemy.py
tests/: test_smoke.py
